--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi>=0.100.0
-uvicorn[standard]>=0.23.0
 youtube-transcript-api>=0.6.0
 pydantic>=2.8.0
 python-multipart>=0.0.6
 tenacity>=8.0.0
+requests
+
